benchmarks and zero alloc String Set